@@ -394,23 +394,23 @@ ITEM_SP_TIME_OBJ =[
 //ITEM_SP_TIME_OBJ_SORT = [0,5,10,4,27,3,44,37,30,31,26,39,49,45,46,18,48,15,11,12,14,13,17,32,1,7,47,35,33,21,16,40,28,34,38,42,19,22,23,24,36,41,25,6,20,8,29,43];
 
 Potion_Type =[
-[0,28.4,"Red Potion"]
-,[1,28.4,"Yellow Potion"]
-,[2,28.4,"White Potion"]
-,[3,3.4,"Blue Potion"]
-,[4,3.4,"Slim Red Potion"]
-,[5,0.9,"Slim Yellow Potion"]
-,[6,0,"Slim White Potion"]
-,[7,18.4,"Alcohol"]
-,[8,8.4,"Acid Bottle"]
-,[9,8.4,"Bottle Grenade"]
-,[10,8.4,"Plant Bottle"]
-,[11,8.4,"Marine Sphere Bottle"]
-,[12,0,"Glistening Coat"]
-,[13,3.4,"Anodyne"]
-,[14,3.4,"Aloevera"]
-,[15,3.4,"Embryo"]
-,[16,3.4,"Elemental Resist Potions"]
+[0,25,"Red Potion"]
+,[1,25,"Yellow Potion"]
+,[2,25,"White Potion"]
+,[3,0,"Blue Potion"]
+,[4,0,"Slim Red Potion"]
+,[5,-2.5,"Slim Yellow Potion"]
+,[6,-5,"Slim White Potion"]
+,[7,15,"Alcohol"]
+,[8,5,"Acid Bottle"]
+,[9,5,"Bottle Grenade"]
+,[10,5,"Plant Bottle"]
+,[11,5,"Marine Sphere Bottle"]
+,[12,-5,"Glistening Coat"]
+,[13,0,"Anodyne"]
+,[14,0,"Aloevera"]
+,[15,0,"Embryo"]
+,[16,0,"Elemental Resist Potions"]
 ];
 Potion_Max = 17;
 
