@@ -2239,37 +2239,37 @@ ItemID = [
 ,[497,1,1968]
 ,[498,1,1969]
 ,[499,1,1970,1976]
-,[500,1,5118],
-[501,4,0],
-[502,4,0],
-[503,4,0],
-[504,4,0],
-[505,4,0],
-[506,4,0],
-[507,4,0],
-[508,4,0],
-[509,4,0],
-[510,4,0],
-[511,4,0],
-[512,4,0],
-[513,4,0],
-[514,4,0],
-[515,4,0],
-[516,4,0],
-[517,4,0],
-[518,4,0],
-[519,4,0],
-[520,4,0],
-[521,4,0],
-[522,4,0],
-[523,4,0],
-[524,4,0],
-[525,4,0],
-[526,4,0],
-[527,4,0],
-[528,4,0],
-[529,4,0],
-[530,4,0],
+,[500,1,5118]
+,[501,1,5109]
+,[502,1,5111]
+,[503,1,5115]
+,[504,1,5112,5119]
+,[505,1,5114,5120]
+,[506,1,5108]
+,[507,1,5116]
+,[508,1,5117]
+,[509,1,5121]
+,[510,1,2112]
+,[511,1,2113]
+,[512,1,2510]
+,[513,1,2512]
+,[514,1,2514]
+,[515,1,2414]
+,[516,1,2416]
+,[517,1,2652]
+,[518,1,2352]
+,[519,1,5055]
+,[520,1,1243]
+,[521,1,1723]
+,[522,1,2513]
+,[523,1,2658]
+,[524,1,2659]
+,[525,1,2660]
+,[526,1,2661]
+,[527,1,2662]
+,[528,1,5185]
+,[529,1,5182]
+,[530,1,5181],
 [531,4,0],
 [532,4,0],
 [533,4,0],
